2015-06-26  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-263

	* src/continua.cc, src/interpolation.cc, src/interpolation_poly.cc,
	src/m_jacobian.cc, src/m_optproperties.cc, src/ppath.cc, src/sensor.cc:

	Use the DEBUG_ONLY(...) macro around variable definitions and argument
	names that are only used in assertions. Avoids unused variable warnings
	in release build.

2015-06-26  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-262

	* controlfiles/CMakeLists.txt: Move TIPS clear sky test to xmldata.

2015-06-26  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-261

	* Comment on Richard previous commit: The slowdown when using TIPS data
	is due to an assertion in the interpolation routines. It calls
	is_increasing which has a large impact on performance (long vector
	checked in every iteration inside xsec_species).

	With a release build (cd build; cmake -DCMAKE_BUILD_TYPE=Release .), it
	is only marginally slower than using the builtin coeffs.

	* controlfiles/CMakeLists.txt,
	controlfiles/artscomponents/clearsky/TestClearSkyTips.arts:

	Add test case for TIPS.

	Move artscomponents/radiolink/TestRadioLink.arts to slow tests.

2015-06-25  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-260
	
	* src/m_abs_lookup.cc (propmat_clearsky_fieldCalc): now properly returns a
	Tensor6 nlte_source_field.  If t_nlte_field.empty() is false the field is
	one stokes_dim smaller than propmat_clearsky_field.  If 
	t_nlte_field.empty() is true, so is nlte_source_field.empty().
	
	* src/workspace.cc, src/methods.cc: Variable creation and function
	redefinition.

2015-06-25  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-258
	
	Now the externalized partition functions can be used by everyone.
	Note that there is probably a bug presently that makes the calculations
	very slow.  I.e., make check with built-in takes one quarter the time
	as using the gridded data.  There might be a copy-bug 
	in either (CalculatePartitionFctFromData) or in the calls to 